feat: implement idx trqp qry 1 (#353)
